<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/my_background"
    tools:context="com.example.android.scorekeeper.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <!--Team A-->
        <LinearLayout

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:padding="12dp"
                android:text="@string/TeamA"
                android:textColor="@color/violet"
                android:textSize="36sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway_semibold"
                android:onClick="ScoreA"
                android:text="@string/ButtonGoal"
                android:textColor="@color/white_gray"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Score_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:layout_marginTop="14dp"
                android:text="@string/goalsA"
                android:textColor="@color/black"
                android:textSize="34sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="FoulsA"
                android:textColor="@color/white_gray"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/ButtonFoul" />

            <TextView
                android:id="@+id/Fouls_A"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:layout_marginBottom="14dp"
                android:text="@string/foulsA"
                android:textColor="@color/red"
                android:textSize="34sp" />

        </LinearLayout>

        <View
            android:layout_width="4dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="100dp"
            android:layout_marginLeft="24dp"
            android:layout_marginRight="24dp"
            android:layout_marginTop="100dp"
            android:background="@color/gray">

        </View>

        <!--Team B-->

        <LinearLayout

            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="sans-serif-smallcaps"
                android:padding="16dp"
                android:text="@string/TeamB"
                android:textColor="@color/violet"
                android:textSize="36sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_gray"
                android:onClick="ScoreB"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/ButtonGoal"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/Score_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:layout_marginTop="14dp"
                android:onClick="ScoreB"
                android:text="@string/foulsB"
                android:textColor="@color/black"
                android:textSize="34sp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white_gray"
                android:onClick="FoulsB"
                android:fontFamily="@font/raleway_semibold"
                android:text="@string/ButtonFoul" />

            <TextView
                android:id="@+id/Fouls_B"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:layout_marginTop="14dp"
                android:text="@string/goalsB"
                android:textColor="@color/red"
                android:textSize="34sp" />


        </LinearLayout>

    </LinearLayout>

    <Button
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/football"
        android:onClick="ResetAll"
        android:text="@string/reset"
        android:textAllCaps="true"
        android:textColor="@color/light_red"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>
